# validate-sops

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  .pylintrc  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: development.yml  pull-request-open.yml  release.yml
tests/: test_validate_sops.py
tests/secrets/: commented.env  encrypted.env  encrypted.json  encrypted.yaml  invalid_sops.json  invalid_sops.yaml  malformed.json  malformed.yaml  missing_version.json  missing_version.yaml  unencrypted.json  unencrypted.yaml
validate_sops/: __init__.py  __main__.py  main.py  validate_sops.py
