[project]
name = "validate-sops"
description = "A Python utility to ensure your files are securely encrypted with SOPS. Integrates seamlessly into your pre-commit workflow, providing automated validation for SOPS-encrypted files, enhancing security and compliance in your development process."
license = "MIT"
keywords = ["sops", "pre-commit", "hook"]
dynamic = ["version"]
readme = "README.md"
authors = [
  {name = "Vladimir Zhukov"},
  {name = "Bertrand Lanson", email = "bertrand.lanson@protonmail.com"}
]
requires-python = '>=3.10,<4.0'
dependencies = ['pyyaml (>=6.0.1,<7.0.0)']

[project.urls]
homepage = "https://github.com/voldy/validate-sops"
repository = "https://github.com/voldy/validate-sops"

[project.scripts]
validate-sops = 'validate_sops.main:main'

[tool.poetry]
version = "0.1.1"

include = ["LICENSE"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"
pylint = "^3.0.3"
pre-commit = "^3.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_provider = "poetry"
tag_format = "v$version"
update_changelog_on_bump = true
version_files = [
  "pyproject.toml:^version",
]
